--- a/src/main/webapp/user/login.html
+++ b/src/main/webapp/user/login.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <script src="../js/vue.global.js"></script>
+<!--    axios ajax方式发送post/get请求-->
     <script src="../js/axios.min.js"></script>
     <script src="../js/jquery-3.0.0.js"></script>
+<!--    弹窗js-->
     <script src="../js/sweetalert2.all.min.js"></script>
+<!--    sha1加密js,用于密码加密-->
     <script src="../js/sha1.min.js"></script>
     <link rel="stylesheet" href="../css/picnic.css">
     <style>
@@ -13,7 +16,6 @@
             text-align: center;
             background: rgba(255,255,255,0.8);
         }
-
         input {
             width: 300px;
         }
@@ -24,12 +26,14 @@
     <title>登录</title>
 </head>
 <body style="width: 100%;">
+<!--引入导航栏,用js加载header.html-->
 <div id="header"></div>
 <script>
     $("#header").load("../header.html")
 </script>
 <div class="flex center one demo" id="logindiv">
     <div class="500" style="width: 500px;">
+<!--        表格-->
         <table>
             <tr>
                 <td colspan="2">
@@ -41,6 +45,7 @@
                     用户名:
                 </td>
                 <td>
+<!--                    输入用户名-->
                     <input type="text" placeholder="用户名" v-model="username">
                 </td>
             </tr>
@@ -49,6 +54,7 @@
                     密码:
                 </td>
                 <td>
+<!--                    输入密码-->
                     <input type="password" placeholder="密码6-16位" v-model="upassword">
                 </td>
             </tr>
@@ -56,6 +62,7 @@
                 <td></td>
                 <td>
                     <label>
+<!--                        选择是否30天内自动登录,若不选择则登录状态只保留到关闭浏览器前-->
                         <input type="checkbox" id="loginStatusSave">
                         <span class="checkable">保存登录状态,30天内无需再次登录</span>
                     </label>
@@ -64,12 +71,14 @@
             <tr>
                 <td></td>
                 <td>
+<!--                    click调用login函数-->
                     <button @click="login" style="width: 300px;">登录</button>
                 </td>
             </tr>
             <tr>
                 <td></td>
                 <td>
+<!--                    跳转到注册页面-->
                     <a href="/user/register.html">注册账号</a>
                 </td>
             </tr>
@@ -77,6 +86,7 @@
     </div>
 </div>
 <script>
+<!--    创建vue对象-->
     const {createApp} = Vue
     createApp({
             data() {
@@ -86,26 +96,34 @@
                 }
             },
             methods: {
+                //login登录函数
                 login: function () {
+                    //ifsave是否保存登录状态30天.默认0是不保存
                     var ifsave=0
+                    //如果选中了则修改为1,保存登录状态30天,通过id loginStatusSave 选择dom然后查看其checked属性
                     if ($("#loginStatusSave").prop('checked')) {
                         ifsave=1
                     }
+                    //密码长度检查,任何密码加密后应都为40位,如果不是40位说明还未加密
                     if(this.upassword.length!=40)
                     {
+                        //加密
                         this.upassword = sha1(this.upassword)
                     }
-
+                    //通过axios发送ajax请求,发送的是post请求,携带数据username用户名,upaddword密码,ifsave是否保存登录状态
                     axios({
                         method: "POST",
                         url: "/loginServlet",
                         data: "username=" + this.username+"&upassword="+this.upassword+"&ifsave="+ifsave
                     }).then(function (resp) {
                         var icontype = "error"
+                        //默认显示错误图标,只有当返回的消息是登陆成功时,才显示成功图标
                         if (resp.data.msg == '登录成功') {
                             icontype = 'success'
+                            //1秒后跳转到主页
                             setTimeout("window.location.href='/index'", 1000)
                         }
+                        //弹窗,icon图标,title显示消息内容,showconfirmbutton是否显示确认按钮,timer显示时间,时间到后自动关闭
                         Swal.fire({
                             icon: icontype,
                             title: resp.data.msg,
@@ -116,6 +134,7 @@
                 }
             }
         }
+    //    绑定id为logindiv的div
     ).mount('#logindiv')
 </script>
 </body>
