--- a/src/main/webapp/user/register.html
+++ b/src/main/webapp/user/register.html
@@ -29,7 +29,7 @@
 </script>
 <div class="flex center one demo">
     <div style="width: 800px;">
-
+<!--用户填写注册信息的表格-->
 <form id="register" onsubmit="return false">
     <table>
         <tr>
@@ -37,6 +37,7 @@
                 用户名:
             </td>
             <td>
+<!--                v-model双向绑定vue中的数据,输入框中的数据被修改时,-->
                 <label style="height: 50px;"><input type="text" name="username" v-model="username" id="username" placeholder="3-10个字符"></label>
             </td>
             <td>
@@ -134,6 +135,7 @@
 
 <script>
     $(document).ready(function(){
+        //username输入框失焦后发送请求查询该用户名是否可用
         $("#username").blur(function () {
                 axios({
                     method: "GET",
@@ -154,6 +156,7 @@
                 })
             }
         )
+        //邮箱失焦后检查邮箱格式是否正确
         $("#email").blur(function () {
             let reg = /^[a-zA-Z0-9]+([-_.][A-Za-zd]+)*@([a-zA-Z0-9]+[-.])+[A-Za-zd]{2,5}$/
             if (reg.test($("#email").val())){
@@ -164,6 +167,7 @@
                 $("#emailtips").text('邮箱格式不正确');
             }
         })
+        //密码输入框失焦后检查密码长度是否在允许范围内
         $("#upassword").blur(function () {
             if($("#upassword").val().length<6||$("#upassword").val().length>16){
                 $("#pwdtips").css('color','red')
@@ -174,6 +178,7 @@
                 $("#pwdtips").text('')
             }
         })
+        //检查两次输入密码是否相同
         $("#upasswordrepeat").blur(function () {
             if($("#upassword").val()!=$("#upasswordrepeat").val()){
                 $("#pwdretips").css('color','red')
@@ -184,6 +189,7 @@
             }
         })
     })
+    //创建vue对象
     const {createApp} = Vue
     createApp({
             data() {
@@ -198,6 +204,7 @@
                 }
             },
             methods: {
+                //发送邮件功能,实际只做了写入数据库,验证码需要从数据库中查看
                 sendemail: function () {
                     axios({
                         method: "POST",
@@ -216,17 +223,23 @@
                         })
                     })
                 },
+                //看不清换一张验证码
                 changeverifycode: function () {
                     document.getElementById("verifyImg").src = "/checkcodeServlet?" + new Date().getMilliseconds()
                 },
+                //注册功能
                 register:function () {
+                    //检查用户名是否可用
                     if ($("#tips").text()=="该用户名可以使用"){
+                        //检查密码输入长度
                         if (this.upassword==this.upasswordrepeat&&($("#upassword").val().length>=6&&$("#upassword").val().length<=16)||$("#upassword").val().length==40){
+                            //检查保存密码是否被选中
                             if($("#accept").prop('checked')){
                                 if(this.upassword.length!=40)
                                 {
+                                    //密码加密
                                     this.upassword = sha1(this.upassword)
-                                this.upasswordrepeat = sha1(this.upasswordrepeat)
+                                    this.upasswordrepeat = sha1(this.upasswordrepeat)
                                 }
 
                                 axios({
